# docs/api/API_swagger.yaml
@@ -1,4 +1,13 @@
 definitions:
+  github_com_tbxark_go-base-api_pkg_cdn_cdnmodels.UploadToken:
+    properties:
+      key:
+        type: string
+      token:
+        type: string
+      url:
+        type: string
+    type: object
   github_com_tbxark_go-base-api_pkg_dao_ent.User:
     properties:
       avatar:
@@ -26,10 +35,10 @@ definitions:
         description: 用户名
         type: string
     type: object
-  github_com_tbxark_go-base-api_pkg_web.DataResponse-github_com_tbxark_go-base-api_pkg_web_models_MessageResponse:
+  github_com_tbxark_go-base-api_pkg_web.DataResponse-github_com_tbxark_go-base-api_pkg_cdn_cdnmodels_UploadToken:
     properties:
       data:
-        $ref: '#/definitions/github_com_tbxark_go-base-api_pkg_web_models.MessageResponse'
+        $ref: '#/definitions/github_com_tbxark_go-base-api_pkg_cdn_cdnmodels.UploadToken'
       message:
         type: string
       success:
@@ -53,15 +62,6 @@ definitions:
       success:
         type: boolean
     type: object
-  github_com_tbxark_go-base-api_pkg_web.DataResponse-internal_biz_api_UploadTokenResponse:
-    properties:
-      data:
-        $ref: '#/definitions/internal_biz_api.UploadTokenResponse'
-      message:
-        type: string
-      success:
-        type: boolean
-    type: object
   github_com_tbxark_go-base-api_pkg_web.DataResponse-internal_biz_api_UserInfoMeResponse:
     properties:
       data:
@@ -71,7 +71,7 @@ definitions:
       success:
         type: boolean
     type: object
-  github_com_tbxark_go-base-api_pkg_web_models.MessageResponse:
+  github_com_tbxark_go-base-api_pkg_web_webmodels.MessageResponse:
     properties:
       message:
         type: string
@@ -85,6 +85,15 @@ definitions:
       user:
         $ref: '#/definitions/github_com_tbxark_go-base-api_pkg_dao_ent.User'
     type: object
+  internal_biz_api.MessageResponse:
+    properties:
+      data:
+        $ref: '#/definitions/github_com_tbxark_go-base-api_pkg_web_webmodels.MessageResponse'
+      message:
+        type: string
+      success:
+        type: boolean
+    type: object
   internal_biz_api.UpdateUserInfoRequest:
     properties:
       avatar:
@@ -96,15 +105,6 @@ definitions:
     properties:
       info:
         $ref: '#/definitions/github_com_tbxark_go-base-api_pkg_dao_ent.User'
-    type: object
-  internal_biz_api.UploadTokenResponse:
-    properties:
-      key:
-        type: string
-      token:
-        type: string
-      url:
-        type: string
     type: object
   internal_biz_api.UserInfoMeResponse:
     properties:
@@ -140,7 +140,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github_com_tbxark_go-base-api_pkg_web.DataResponse-github_com_tbxark_go-base-api_pkg_web_models_MessageResponse'
+            $ref: '#/definitions/internal_biz_api.MessageResponse'
       summary: 获取系统状态
       tags:
       - api
@@ -160,7 +160,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github_com_tbxark_go-base-api_pkg_web.DataResponse-internal_biz_api_UploadTokenResponse'
+            $ref: '#/definitions/github_com_tbxark_go-base-api_pkg_web.DataResponse-github_com_tbxark_go-base-api_pkg_cdn_cdnmodels_UploadToken'
       security:
       - ApiKeyAuth: []
       summary: 获取上传凭证
@@ -243,7 +243,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github_com_tbxark_go-base-api_pkg_web.DataResponse-github_com_tbxark_go-base-api_pkg_web_models_MessageResponse'
+            $ref: '#/definitions/internal_biz_api.MessageResponse'
       security:
       - ApiKeyAuth: []
       summary: 绑定手机号
