# internal/biz/api/web.go
@@ -7,10 +7,12 @@ import (
 	"github.com/tbxark/go-base-api/pkg/cache"
 	"github.com/tbxark/go-base-api/pkg/cdn"
 	"github.com/tbxark/go-base-api/pkg/log"
-	"github.com/tbxark/go-base-api/pkg/log/field"
-	"github.com/tbxark/go-base-api/pkg/web/auth/jwt_auth"
+	"github.com/tbxark/go-base-api/pkg/log/logfields"
+	"github.com/tbxark/go-base-api/pkg/web"
+	"github.com/tbxark/go-base-api/pkg/web/auth/jwtauth"
 	"github.com/tbxark/go-base-api/pkg/web/middleware/auth"
 	"github.com/tbxark/go-base-api/pkg/web/middleware/logger"
+	"github.com/tbxark/go-base-api/pkg/web/webmodels"
 	"github.com/tbxark/go-base-api/pkg/wechat"
 	"golang.org/x/sync/singleflight"
 	"net/http"
@@ -32,12 +34,12 @@ type Web struct {
 	cdn    cdn.CDN
 	cache  cache.ByteCache
 	render *render.Render
-	token  *jwt_auth.JwtAuth
+	token  *jwtauth.JwtAuth
 	auth   *auth.Auth
 }
 
 func NewWebServer(config *Config, db *dao.Dao, wx *wechat.Wechat, cdn cdn.CDN, cache cache.ByteCache) *Web {
-	token := jwt_auth.NewJwtAuth(config.JWT)
+	token := jwtauth.NewJwtAuth(config.JWT)
 	return &Web{
 		config: config,
 		Engine: gin.New(),
@@ -47,16 +49,18 @@ func NewWebServer(config *Config, db *dao.Dao, wx *wechat.Wechat, cdn cdn.CDN, c
 		cache:  cache,
 		render: render.NewRender(cdn, db, true),
 		token:  token,
-		auth:   auth.NewAuth(jwt_auth.AuthorizationPrefixBearer, token),
+		auth:   auth.NewAuth(jwtauth.AuthorizationPrefixBearer, token),
 	}
 }
+
+type MessageResponse = web.DataResponse[webmodels.MessageResponse]
 
 func (w *Web) Identifier() string {
 	return "api"
 }
 
 func (w *Web) Run() error {
-	zapLogger := log.ZapLogger().With(field.String("module", "api"))
+	zapLogger := log.ZapLogger().With(logfields.String("module", "api"))
 	loggerMiddleware := logger.NewZapLoggerMiddleware(zapLogger)
 	recoveryMiddleware := logger.NewZapRecoveryMiddleware(zapLogger)
 	//rateLimiter := middleware.NewNewRateLimiterByClientIP(100*time.Millisecond, 10, time.Hour)
